# msikbd-settings

./: Cargo.toml  Makefile
extra/: msikbd-settings.desktop  msikbd-settings.service
src/: api.rs  color.rs  config.rs  daemon.rs  gui.glade  gui.rs  keyboard.rs  main.rs  pipe.rs
src/client/: gui.glade  gui.rs
src/daemon/: keyboard.rs  listeners.rs  mod.rs
